<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tameshigiri</string>
    <string name="app_title">Mini-Game 1</string>
    <string name="mode">Test</string>
    <string name="tested_attribute">Reflexes</string>
    <string name="button_start">Start !</string>
    <string name="app_content_label">PlayContent</string>
    <string name="playContent_text"></string>
    <string name="menu_options">Options</string>
    <string name="menu_pause">Pause</string>
    <string name="menu_resume">Resume</string>
    <string name="menu_1_joueur">Mode solo</string>
    <string name="menu_2_joueurs">Deux Joueurs</string>
    <string name="difficulty">Difficulty</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_vhard">Very Hard</string>
    <string name="Version">0.3</string>
    <string name="end_victory">Victory!</string>
    <string name="end_defeat">Defeat</string>
    <string name="end_vic_msg">Congrats! You seem to have defeated\nthe all migthy %s in only :</string>
    <string name="end_def_msg">It seems you ninja abilities were not\nenough this time, you lost to %s in :</string>
    <string name="end_retry_btn">Retry</string>
    <string name="end_menu_btn">Menu</string>
    <string name="diag_stats_text">Pour consulter les statistiques liés à chaque ennemi, vous devez pressez une seconde sur l\'ennemi à consulter et ensuite glisser votre doigt vers le bas pour les statistiques locales et vers le haut pour voir votre ranking facebook.</string>
    <string name="diag_stats_title">Statistics</string>
    <string name="diag_fb_title">Friend Connect</string>
    <string name="diag_fb_text">Ce jeu à été conçu de manière à s\'intégré avec facebook pour vous permettre de compétitionner avec vos amis.</string>
</resources>
