<?xml version="1.0" encoding="utf-8"?>

<!-- Layout pour le mini-jeu. -->

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="@drawable/back"
  android:id="@+id/verticalMenu">

  <!-- Title -->
  <TextView 
    android:text="@string/app_title"
    android:id="@+id/labelTitle"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:textColor="#FFFFFF"
    android:textSize="40sp"
    android:layout_width="fill_parent" 
    android:paddingBottom="15sp"
    android:paddingTop="25sp"/>
  
  <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#111111">
    
    <!-- Le mode -->
    <TextView
      android:text="@string/mode" 
      android:id="@+id/labelMode" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content"
      android:textSize="25sp"
      android:paddingLeft="15sp"
      android:layout_weight="1" />
   
    <!-- Le mode -->
    <TextView
      android:text="@string/tested_attribute" 
      android:id="@+id/labelMode" 
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="right"
      android:textSize="25sp"
      android:paddingRight="15sp"
      android:layout_weight="1" />
  </LinearLayout>
  
  <!-- Bouton joueur solo. -->
  <Button
    android:id="@+id/btnSolo"
    android:text="@string/menu_1_joueur"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textColor="#dddddd"
    android:textSize="40sp"
    android:background="#d0111111"
    android:clickable="true"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:layout_marginTop="110sp" />
    
  <!-- Bouton deux joueurs. -->
  <Button
    android:id="@+id/btnDuo"
    android:text="@string/menu_2_joueurs"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textColor="#dddddd"
    android:textSize="40sp"
    android:background="#d0111111"
    android:clickable="true"
    android:layout_gravity="center_horizontal"
    android:paddingLeft="30sp"
    android:paddingRight="30sp"
    android:layout_marginTop="30sp" />
</LinearLayout>
